package GestorEjercicios.enums;

public enum LenguajeProgramacion {
    PYTHON, JAVA, JAVASCRIPT, CPP
}