package GestorEjercicios.enums;

public enum NivelDificultad {
    BASICO, INTERMEDIO, AVANZADO
}