package GestorEjercicios.enums;

public enum TipoLeccion {
    NORMAL,
    DIAGNOSTICO,
    PRUEBA
} 